--- a/m-demo/pom.xml
+++ b/m-demo/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.oseasy</groupId>
-		<artifactId>m-demweb</artifactId>
+		<artifactId>m-plugin</artifactId>
 		<version>5.0.0-SNAPSHOT</version>
 	</parent>
 
