--- a/m-demweb/pom.xml
+++ b/m-demweb/pom.xml
@@ -78,6 +78,61 @@
                     <warName>${curproject.warFinalName}</warName>
                 </configuration>
             </plugin>
+            <plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.1.0</version>
+				<executions>
+					<execution>
+						<id>m-demo-copy-sources</id>
+						<phase>process-sources</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<encoding>UTF-8</encoding>
+							<outputDirectory>${basedir}/AAAAAAAAAAAAAAAAAAAAAAAAAA</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${project.parent.basedir}/m-demo/src/main/webapp</directory>
+									<includes>
+										<include>**/*.*</include>
+									</includes>
+									<excludes>
+										<exclude>**/*.bat</exclude>
+									</excludes>
+									<filtering>true</filtering>
+								</resource>
+								<!-- <resource>
+									<directory>${project.parent.basedir}/m-demo/src/main/resources</directory>
+									<includes>
+										<include>**/*.xml</include>
+									</includes>
+									<excludes>
+										<exclude>**/mappings/demo/**/*.xml</exclude>
+									</excludes>
+									<filtering>true</filtering>
+								</resource>
+								<resource>
+									<directory>${project.parent.basedir}/m-demo/src/main/java</directory>
+									<includes>
+										<include>**/*.java</include>
+										<include>**/*.txt</include>
+									</includes>
+									<filtering>true</filtering>
+								</resource> -->
+								<!-- <resource>
+									<directory>${project.basedir}/src/main/java</directory>
+									<includes>
+										<include>**/*.java</include>
+										<include>**/*.txt</include>
+									</includes>
+									<filtering>true</filtering>
+								</resource> -->
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
